# cuda-learning

./: AI_Infra学习计划_8个月.xlsx  CMakeLists.txt  CMakePresets.json  CUDA快速参考.md  Week 1 学习指南.md  Week1_CUDA入门_学习计划.xlsx  hello.cu
Week1_CUDA入门/: 01-1_hello_cuda.cu  01-2_2d_grid.cu  01_hello_cuda.cu  02_memory_basic.cu  03_vector_add.cu  04_vector_add_cpu.cpp  05_vector_add_gpu_timed.cu  06-1_matrix_mutiply.cu  06_matrix_add.cu  07_error_handling.cu  Week 1 学习指南.md  Week1_CUDA入门_学习计划.xlsx  cuda_utils.h  matrix_operations.cu
